Fixed comparison not showing with latex

--- a/src/styles/Calculator.scss
+++ b/src/styles/Calculator.scss
@@ -10,3 +10,7 @@
 
   border-radius: 0.5rem;
 }
+
+.latex-container {
+  overflow: hidden;
+}
