--- a/src/styles/components/CalculatorIO.scss
+++ b/src/styles/components/CalculatorIO.scss
@@ -85,15 +85,6 @@
         white-space: pre;
         will-change: transform;
       }
-
-      .latex-container {
-        border: 1px solid red;
-
-        span {
-          margin: 0;
-          padding: 0;
-        }
-      }
     }
   }
 
